<resources>
    <string name="app_name">Dune</string>
    <string name="atreides">Atreides</string>
    <string name="atreides_desc">House Atreides\n\nHouse Atreides has been a prominent power for thousands of years. They have a long tradition of being wise and just administrators. Their people are loyal, hard working, and rather peaceful. The Atreides leaders are intelligent and noble and the Atreides have a great devotion towards duty. Atreides were one of the first Houses to come to Arrakis and are well prepared for the conditions they will have to face.\n\nThe Atreides home planet is called, Caladan. It has a warm, calm climate and the lands are lush and green. The rich soils and mild weather combine to make it a agricultural planet. In the recent centuries industrial and technological growth have added to the prosperity of the Atreides.\n\nThe Mentat for the Atreides is Cyril. The Atreides are not known for attacking first but instead defend themselves well against the attacks of the other Houses. The Atreides start out trying to be diplomatic but this strategy will not work and all out warfare between the houses is imminent.</string>
    <string name="ordos">Ordos</string>
    <string name="ordos_desc">The Ordos\n\nThe Ordos are represented by a group of wealthy families who banded together for greater security. The Ordos have little conscience and seem to gain strength through their sabotage and terrorism. They are protected by their great wealth and their status as a great House is unaffected by their long history of deception.\n\nThe home planet of the Ordos is a frigid ice-covered world. It is believed that the Ordos import their agricultural and technological goods from nearby star systems. Acting as traders and brokers, the Ordos produce no physical products but instead rely upon their merchandising skills to make their profits.\n\nThe Mentat Ammon is in charge of the Ordos operations on Dune.</string>
    <string name="harkonnen">Harkonnen</string>
    <string name="harkonnen_desc">House Harkonnen\n\nHouse Harkonnen is the most savage House in the universe. The Harkonnens have a history of using violence and fear to achieve their objectives. Status for the Harkonnens is taken not given. If a soldier kills his commander, he assumes that position and is respected by all.\n\nHouse Harkonnen comes from the dark planet of Giedi Prime. They have spread across the universe with the evil tactics. The Harkonnen are a cruel people and can be ruthless towards both friend and foe in their pursuit of control of Dune.\n\nThe Harkonnen campaign is being dictated by the Mentat Radnor. Radnor is a true Harkonnen, killing the previous Mentat Marko, his former teacher and guide. The Harkonnens have spent most of their time assembling a large military force and are by far the strongest force on Dune. The Harkonnens are very dangerous as they mainly want to just conquer the other Houses.</string>
    <string name="mentat">Mentat</string>
    <string name="generic">Text</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="build">Build</string>
    <string name="place">Place</string>
    <string name="spice">Spice</string>
    <string name="moving">Moving</string>
    <string name="stopped">Stopped</string>
    <string name="harvesting">Harvesting</string>
    <string name="returning">Returning</string>
    <string name="select_production">Select Production</string>
    <string name="function_not_implemented">This function is not yet implemented.</string>
    <string name="selection_graphic">Selection Graphic</string>
    <string name="main_menu_graphic">Main Menu Graphic</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="main_menu_new_game">New Game</string>
    <string name="main_menu_load">Load</string>
    <string name="main_menu_quit">Quit</string>
    <string name="main_menu_select_house">Select your house.</string>
    <string name="windtrap_power_produced">Power Produced</string>
    <string name="windtrap_power_required">Power Required</string>
    <string name="refinery_spice_storred">Spice Storred</string>
    <string name="refinery_spice_capacity">Spice Capacity</string>
    <string name="structure_slab_name">Concrete Slab</string>
    <string name="structure_slab_description">Concrete Slabs may serve as roadways and make up the foundations that are required before erecting structures. Concrete slabs cannot be repaired if damaged, and must be replaced or abandoned.</string>
    <string name="structure_wall_name">Wall</string>
    <string name="structure_wall_description">Walls can be used for structure enhancement and fortification purposes. Like the concrete slabs, walls can not be repaired.</string>
    <string name="structure_windtrap_name">Wind Trap</string>
    <string name="structure_windtrap_description">The Wind Traps provide power and water to an installation. Large, aboveground ducts funnel wind underground into turbines which power the generators and humidity extractors.</string>
    <string name="structure_refinery_name">Spice Refinery</string>
    <string name="structure_refinery_description">The Refinery is the basis of all spice production on Dune. Harvesters transport mined spice to the Refinery where it is converted into credits. Refined spice is automatically distributed among the silos for storage. All Refineries will be provided with a Harvester.</string>
    <string name="structure_silo_name">Spice Silos</string>
    <string name="structure_silo_description">Spice Silos hold harvested spice. When the Refinery completes the conversion process, it automatically distributes the spice evenly among the silos. Note: When harvested spice quantities exceed Silo capacity, the excess will be lost.</string>
    <string name="structure_outpost_name">Outpost</string>
    <string name="structure_outpost_description">The radar capabilities of an Outpost are used for military command purposes. An on-screen radar is activated when construction of the Outpost is complete. An Outpost is required before any new military units can be produced.</string>
    <string name="structure_turret_name">Turret</string>
    <string name="structure_turret_description">This stationary turret fires armor-piercing rounds at a close range. Turrets are maintained by a single tactical ground commander, who handles targeting and guidance. Turrets will fire on any enemy units within range.</string>
   	<string name="structure_rturret_name">Rocket Turret</string>
    <string name="structure_rturret_description">An upgraded version of the standard Turret, the missile turret also has long range, high explosive projectiles. The additional missile launchers are attached to the head of the turret.</string>
    <string name="structure_constyard_name">Construction Yard</string>
    <string name="structure_constyard_description">A Construction Yard is required to build any new structures. It contains all materials required for building structures on Dune.</string>
   	<string name="structure_barracks_name">Barracks</string>
    <string name="structure_barracks_description">Barracks are required to produce and train Light Infantry units.</string>
   	<string name="structure_wor_name">WOR</string>
    <string name="structure_wor_description">The WOR facility produces Heavy Trooper units by providing advanced training and weaponry.</string>
   	<string name="structure_lightfactory_name">Light Factory</string>
    <string name="structure_lightfactory_description">The Light Factory produces small, lightly armored, combat vehicles. A Light Factory must be built before a Heavy Factory can be constructed.</string>
   	<string name="structure_heavyfactory_name">Heavy Factory</string>
    <string name="structure_heavyfactory_description">The Heavy Factory produces large, tracked, military or spice harvesting vehicles. Harvesters and tanks can be produced with a Heavy Factory.</string>
   	<string name="structure_techfactory_name">High Tech Factory</string>
    <string name="structure_techfactory_description">The High Tech Factory produces airborne units, such as the Carryalls.</string>
   	<string name="structure_repairfactory_name">Repair Facility</string>
    <string name="structure_repairfactory_description">A Repair Facility is required to repair damaged vehicles. Credits are charged according to the extent of damage and type of vehicle repaired.</string>
   	<string name="structure_ix_name">IX</string>
    <string name="structure_ix_description">The IX facility provides technology upgrades on structures and vehicles. Special weapons and prototypes may also become available through the Research Center.</string>
   	<string name="structure_starport_name">Starport</string>
    <string name="structure_starport_description">The Starport allows you to engage in intergalatic trading with the Merchant\'s Guild. They provide a trading market for vehicles and airborne units at premium rates.</string>
   	<string name="structure_palace_name">Palace</string>
    <string name="structure_palace_description">Palaces are awarded to chosen leaders who show great bravery and prowess in their missions. A Palace cannot be purchased or built. The Palace will also serve as the command center as soon as it is occupied. Many Palaces feature unique additional options.</string>
    <string name="unit_harvester_name">Harvester</string>
    <string name="unit_harvester_description">The Harvester separate spice from the sand. Unusable sand is then dumped through the exhaust system. Once filled, the Harvester will automatically take raw spice to the Refinery for processing.</string>
    <string name="unit_mcv_name">MCV</string>
    <string name="unit_mcv_description">The MCV scout vehicle is used to find rock outcroppings suitable for erection of new installations. Upon locating an appropriate site the MCV will transform itself to a Construction Yard.</string>
    <string name="unit_infantry_name">Light Infantry</string>
    <string name="unit_infantry_description">Infantry consists of lightly armored foot soldiers, equipped with 9mm RP assault rifles which fire armor piercing rounds. Infantry have a limited firing range and speed.</string>
    <string name="unit_troopers_name">Heavy Troopers</string>
    <string name="unit_troopers_description">Troopers are armed with 10mm Rotary Cannons firing armor piercing incendiary rounds and FS rockets. Troopers wear heavy, mechanized power suits which enhance performance and speed.</string>
    <string name="unit_trike_name">Trike</string>
    <string name="unit_trike_description">The Trike is a lightly armored, three-wheeled, vehicle which fires armor piercing rounds. It has limited firing range, but moves rapidly.</string>
    <string name="unit_quad_name">Quad</string>
    <string name="unit_quad_description">The Quad is a lightly armored, four-wheeled vehicle which fires armor piercing incendiary rounds. The slower Quad is stronger than the Trike in both armor and firepower.</string>
    <string name="unit_tank_name">Combat Tank</string>
    <string name="unit_tank_description">The Combat Tank is a medium armored, tracked tank firing high explosive rounds. It is slower than the average tank and has limited manoeuvrability.</string>
    <string name="unit_launcher_name">Rocket Launcher</string>
    <string name="unit_launcher_description">The Missile Tank fires a battle support missile, similar to the Rocket Turret. The Missile Tank has long range strike capability, and although inaccurate, it fires two missiles for greater coverage, and moves faster than the heavier battle tanks.</string>
    <string name="unit_stank_name">Siege Tank</string>
</resources>