<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/structure_selection_panel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/primary_render_surface"
    android:layout_alignLeft="@+id/primary_render_surface"
    android:orientation="vertical">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/selection_graphic"
	    android:orientation="horizontal"
	    android:padding="3dip" >

	    <ImageView
	        android:id="@+id/building_image"
	        android:layout_width="58dp"
	        android:layout_height="36dp"
	        android:contentDescription="@string/selection_graphic"
	        android:src="@drawable/barracks" />

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/building_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:paddingLeft="2dp"
	            android:paddingRight="2dp"
	            android:text="@string/generic"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <ProgressBar
	            android:id="@+id/building_progress_bar"
	            style="?android:attr/progressBarStyleHorizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingLeft="2dp"
	            android:paddingRight="2dp" />
	    </LinearLayout>
	</LinearLayout>

	<Button
	    android:id="@+id/build_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/build" />

	<Button
	    android:id="@+id/canx_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel" />

	<Button
	    android:id="@+id/place_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/place" />
    
</LinearLayout>