<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <ImageView
	    android:id="@+id/main_menu_image"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:contentDescription="@string/main_menu_graphic"
	    android:scaleType="fitXY"
	    android:src="@drawable/dune_orbit" />

    <TextView
        android:id="@+id/selection_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/main_menu_image"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/main_menu_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#000000"
            android:padding="10dip" >

            <TextView
                android:id="@+id/main_menu_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/main_menu_new_game_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="newGameBtn"
                android:text="@string/main_menu_new_game" />

            <Button
                android:id="@+id/main_menu_load_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="loadBtn"
                android:text="@string/main_menu_load" />

            <Button
                android:id="@+id/main_menu_quit_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="quitBtn"
                android:text="@string/main_menu_quit" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/house_desc_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical" >

		    <ImageView
		        android:id="@+id/mentat_image"
		        android:layout_width="320dip"
		        android:layout_height="200dip"
		        android:layout_alignTop="@+id/house_desc_panel"
		        android:contentDescription="@string/mentat"
		        android:src="@drawable/mentat_mer" />
		
		    <ImageView
		        android:id="@+id/mentat_display"
		        android:layout_width="182dip"
		        android:layout_height="110dip"
		        android:layout_alignParentRight="false"
		        android:layout_alignRight="@id/mentat_image"
		        android:layout_alignTop="@id/mentat_image"
		        android:layout_alignWithParentIfMissing="true"
		        android:layout_marginRight="9dp"
		        android:layout_marginTop="49dp"
		        android:contentDescription="@string/selection_graphic"
		        android:src="@drawable/tank" />
		
		    <TextView
		        android:id="@+id/mentat_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="false"
		        android:layout_alignParentTop="false"
		        android:layout_below="@id/mentat_image"
		        android:layout_margin="10dip"
		        android:lines="10"
		        android:maxWidth="300dip"
		        android:scrollbars="vertical"
		        android:text="@string/generic" />
		
		    <Button
		        android:id="@+id/ok_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="false"
		        android:layout_below="@id/mentat_text"
		        android:layout_centerHorizontal="true"
		        android:text="@string/ok" />
		
		</RelativeLayout>
        
        <LinearLayout
            android:id="@+id/select_house_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" >

		    <TextView
		        android:id="@+id/main_menu_select_house"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_margin="20dip"
		        android:gravity="center"
		        android:text="@string/main_menu_select_house"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="20dip"
		        android:baselineAligned="false" >

		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >

		            <ImageButton
		                android:id="@+id/chooseAtrBtn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:contentDescription="@string/atreides"
		                android:onClick="chooseAtrBtn"
		                android:scaleType="fitCenter"
		                android:src="@drawable/crest_atr" />
		
		            <TextView
		                android:id="@+id/atrName"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_horizontal"
		                android:text="@string/atreides"
		                android:textAppearance="?android:attr/textAppearanceMedium" />
		        </LinearLayout>
		
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >

		            <ImageButton
		                android:id="@+id/chooseOrdBtn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:contentDescription="@string/ordos"
		                android:onClick="chooseOrdBtn"
		                android:scaleType="fitCenter"
		                android:src="@drawable/crest_ord" />
		
		            <TextView
		                android:id="@+id/ordName"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_horizontal"
		                android:text="@string/ordos"
		                android:textAppearance="?android:attr/textAppearanceMedium" />
		        </LinearLayout>
		
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >

		            <ImageButton
		                android:id="@+id/chooseHarBtn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:contentDescription="@string/harkonnen"
		                android:onClick="chooseHarBtn"
		                android:scaleType="fitCenter"
		                android:src="@drawable/crest_har" />
		
		            <TextView
		                android:id="@+id/harName"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_horizontal"
		                android:text="@string/harkonnen"
		                android:textAppearance="?android:attr/textAppearanceMedium" />
		        </LinearLayout>
		    </LinearLayout>
		</LinearLayout>
    </LinearLayout>
</RelativeLayout>