<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu_select_house_panel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingRight="2dp" >

    <TextView
        android:id="@+id/main_menu_select_house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dip"
        android:gravity="center"
        android:text="@string/main_menu_select_house"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/chooseAtrBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/atreides"
                android:onClick="chooseAtrBtn"
                android:scaleType="fitCenter"
                android:src="@drawable/crest_atr" />

            <TextView
                android:id="@+id/atrName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/atreides"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/chooseOrdBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ordos"
                android:onClick="chooseOrdBtn"
                android:scaleType="fitCenter"
                android:src="@drawable/crest_ord" />

            <TextView
                android:id="@+id/ordName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ordos"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/chooseHarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/harkonnen"
                android:onClick="chooseHarBtn"
                android:scaleType="fitCenter"
                android:src="@drawable/crest_har" />

            <TextView
                android:id="@+id/harName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/harkonnen"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>